fix overflow bug

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -6,7 +6,3 @@
     width: 100%;
     height: 100vh;
   }
-
-#body {
-    height: calc(100% - 6rem);
-}
